[KOGITO-1946] - Release Kogito Operator/CLI 0.11.0 (#394)Signed-off-by: spolti <fspolti@redhat.com>

--- a/deploy/olm-catalog/kogito-operator/custom-subscription-example.yaml
+++ b/deploy/olm-catalog/kogito-operator/custom-subscription-example.yaml
@@ -8,4 +8,4 @@ spec:
   name: kogito-operator
   source: kogito-operator # name of the custom source
   sourceNamespace: openshift-marketplace
-  startingCSV: kogito-operator.v0.8.0-rc1
+  startingCSV: kogito-operator.v0.11.0
